--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -95,5 +95,8 @@ a:-webkit-any-link {
   border-radius: 7px;
 }
 .list>.a:hover{
-  background-color: #7f7f7f30;
+  background-color: #7f7f7f20;
+}
+.list>.a:active{
+  opacity: 0.7;
 }
