--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,6 +7,7 @@ body {
   color: #000;
   text-align: left;
   background-color: #fff;
+  scroll-behavior: smooth;
 }
 
 *, ::after, ::before {
@@ -99,4 +100,24 @@ a:-webkit-any-link {
 }
 .list>.a:active{
   opacity: 0.7;
+}
+
+html{
+  height: 100%;
+  overflow: hidden;
+}
+
+body{
+  background: url(./bg.jpg) center no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;
+  /* backdrop-filter: blur(15px); */
+}
+
+#app{
+  background-color: #ffffffc0;
+  height: 100%;
+  overflow: scroll;
+  padding-bottom: 30px;
 }
