快捷键适配

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -125,6 +125,8 @@ body{
   height: 100%;
   overflow: scroll;
   padding-bottom: 30px;
+  
+  scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark){
